test/Fail/Issue2862fun.err
Issue2862fun.agda:12.3-6: error: [ClashingDefinition]
Multiple definitions of val. Previous definition
val is in scope as
  * a defined name Issue2862fun.val brought into scope by
    - its definition at Issue2862fun.agda:9.1-4
when scope checking the declaration
  val : _
